# fsisim-poc-scaffold

./: .databricksignore  .gitignore  CLAUDE.md  README.md  app.yaml  config.py  databricks.yml  mlflow.db  pyproject.toml
agent/: agent.py  apply_tools.py  deploy_agent.py  prompts.py  tools.sql
agent_server/: agent.py  evaluate_agent.py  memory.py  personas.py  prompts.py  routes.py  start_server.py  utils.py
app/: .databricksignore  app.yaml  requirements.txt
app/backend/: agent_client.py  main.py
app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  main.tsx  theme.ts  themeMode.tsx
app/frontend/src/api/: chat.ts
app/frontend/src/components/: ChatThread.tsx  CitationPill.tsx  CitationSlideOver.tsx  EmptyHero.tsx  LeftRail.tsx  MessageBubble.tsx
data_gen/: gen_issues.py  gen_manuals.py  note_authoring.py  parse_chunk_manuals.py  schema.py  seed_samples.json  value_domains.py  write_issues.py
docs/superpowers/: HANDOFF.md
docs/superpowers/plans/: 2026-06-04-agents-as-apps-memory-feedback.md
docs/superpowers/specs/: 2026-06-04-agents-as-apps-memory-feedback-design.md
infra/: setup_catalog.py  setup_vector_search.py
scripts/: grant_lakebase_permissions.py  init_lakebase_schema.py  run_eval.py  smoke.py
tests/: test_agent_module.py  test_agent_tools.py  test_config.py  test_gen_issues.py  test_gen_manuals.py  test_memory.py  test_note_authoring.py  test_personas.py  test_routes.py  test_schema.py  test_start_server.py  test_utils.py
(+7 files in other folders)
