[project]
name = "fsisim-poc-scaffold"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "databricks-sdk>=0.30.0",
  "databricks-vectorsearch>=0.40",
  "databricks-agents>=1.0.0",
  "mlflow>=3.0.0",
  "psycopg[binary]>=3.2.0",
  "psycopg_pool>=3.2.0",
  "pyspark>=3.5.0",
  "pyarrow>=15.0.0",
  "weasyprint>=62.3",
  "markdown>=3.6",
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-mock>=3.14.0", "ruff>=0.7.0"]

[project.scripts]
start-app = "agent_server.start_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_server", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
